force-app/main/default/objects/Email_Recipient__c/Email_Recipient__c.object-meta.xml
<CustomObject>
    <label>Email Recipient</label>
    <nameField>
        <displayFormat>ER-{000}</displayFormat>
        <label>Email Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Recipients</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>