force-app/main/default/objects/Email_Recipient__c/fields/Additional_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_3__c</fullName>
    <label>Additional Email 3</label>
    <type>Email</type>
</CustomField>