force-app/main/default/objects/Email_Recipient__c/fields/Additional_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Additional_Recipient_Type__c</fullName>
    <label>Additional Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Account Owner</fullName>
            </value>
            <value>
                <fullName>Manually Enter Emails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>