force-app/main/default/objects/Email_Recipient__c/fields/Direct_FUA__c.field-meta.xml
<CustomField>
    <fullName>Direct_FUA__c</fullName>
    <label>Direct FUA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>