force-app/main/default/objects/Email_Recipient__c/fields/Direct_MCN__c.field-meta.xml
<CustomField>
    <fullName>Direct_MCN__c</fullName>
    <label>Direct MCN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>