force-app/main/default/objects/Email_Recipient__c/fields/Indirect_FUA__c.field-meta.xml
<CustomField>
    <fullName>Indirect_FUA__c</fullName>
    <label>Indirect FUA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>