force-app/main/default/objects/Email_Recipient__c/fields/Indirect_MCN__c.field-meta.xml
<CustomField>
    <fullName>Indirect_MCN__c</fullName>
    <label>Indirect MCN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>