force-app/main/default/objects/Email_Recipient__c/fields/Reporting_Filter__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Filter__c</fullName>
    <label>Reporting Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct MCN</fullName>
            </value>
            <value>
                <fullName>Indirect MCN</fullName>
            </value>
            <value>
                <fullName>Direct FUA</fullName>
            </value>
            <value>
                <fullName>Indirect FUA</fullName>
            </value>
            <value>
                <fullName>All FUA</fullName>
            </value>
            <value>
                <fullName>All MCN</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>