force-app/main/default/objects/Email_Recipient__c/fields/Schedule_External_Report__c.field-meta.xml
<CustomField>
    <fullName>Schedule_External_Report__c</fullName>
    <label>Schedule External Report</label>
    <referenceTo>Schedule_External_Report__c</referenceTo>
    <relationshipLabel>Email Recipients</relationshipLabel>
    <relationshipName>Email_Recipient</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>