force-app/main/default/objects/Email_Recipient__c/fields/updatedByBatch__c.field-meta.xml
<CustomField>
    <fullName>updatedByBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UpdatedByBatch</label>
    <type>Checkbox</type>
</CustomField>